transfer from private repo
from localhost to pages woah

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="js/script.js" defer></script>
 </head>
@@ -17,11 +18,16 @@
     <header>
         <div class="topnav">
             <div><a class="active" href="index.html">Home</a></div>
-            <div><a href="pages/projects.html">Projects</a></div>
-            <div><a href="pages/hobbies.html">Hobbies</a></div>
-            <div><a href="pages/contact.html">Contact</a></div>
-            <div><button id="dark-light" class="dark-mode-bttn" type="button">Dark/Light</button></div>
-        </div>  
+            <div class="links"><a href="pages/projects.html">Projects</a></div>
+            <div class="links"><a href="pages/hobbies.html">Hobbies</a></div>
+            <div class="links"><a href="pages/contact.html">Contact</a></div>
+
+            <div><a class="burger"href="javascript:void(0);" class="icon" onclick="burgerMenu()">
+                <i class="fa fa-bars"></i></a>
+            </div>
+
+            <div><button id="dark-light" class="dark-mode-bttn" type="button"><i class="fa fa-moon-o"></i></button></div>
+        </div>
     </header>
     
     <section id="homepage">
@@ -37,9 +43,9 @@
             experiments to figure things out! I love being able to collaborate with different people and hearing out
             different ideas. 
             <br><br>
-            From time to time, you can find me either working on projects (like this website!) or playing games such as
+            From time to time, you can find me either working on <a href="pages/projects.html">projects</a> (like this website!) or playing games such as
             Genshin Impact or Valorant! Recently, I've started playing American Truck Simulator and other games! Find out 
-            more in the <a href="pages/hobbies.html">Hobbies</a> tab!
+            more about what I do during my free time in the <a href="pages/hobbies.html">Hobbies</a> tab!
         </div>
         <hr>
     </section>   
