--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -10,6 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="../js/script.js" defer></script>
 </head>
@@ -25,7 +29,7 @@
                 <i class="fa fa-bars"></i></a>
             </div>
 
-            <div><button id="dark-light" class="dark-mode-bttn" type="button"><i class="fa fa-moon-o"></i></button></div>
+            <div id="dark-light" class="dark-mode-bttn"><i class="fa fa-moon-o"></i></div>
         </div>
     </header>
 
