more information - no code edits

--- a/index.html
+++ b/index.html
@@ -34,21 +34,24 @@
         </div>
     </header>
     
-    <section id="homepage">
-        <div class="homepageHeader">
+    <section id="content">
+        <h3>
             About Me<br>
             <img src="img/headshot.jpg" alt="headshot of Alen Ray Tan">
-        </div>
+        </h3>
 
-        <div class="introduction">
+        <div class="main-text">
             Hello there! My name is Alen Ray Tan. I am currently a computer science
             student here at New Mexico State University. I was born in the Philippines and raised 
             in Las Cruces, New Mexico. I am a "hands-on" type of learner - meaning I love to do different
             experiments to figure things out! I love being able to collaborate with different people and hearing out
             different ideas. 
             <br><br>
-            From time to time, you can find me either working on <a href="pages/projects.html">projects</a> (like this website!) or playing games such as
-            Genshin Impact or Valorant! Recently, I've started playing American Truck Simulator and other games! Find out 
+            I have experience in using Java, C, HTML, CSS, and MySQL. I have a strong interest with front-end development
+            and I am willing to learn different frameworks and such. I am also fluent in English and Proficient in Tagalog (Filipino). 
+            <br><br>
+            From time to time, you can find me either working on <a href="pages/projects.html">projects</a> (like this website!), playing games such as
+            Genshin Impact or Valorant or watching some anime! Recently, I've started playing American Truck Simulator and Palworld! Find out 
             more about what I do during my free time in the <a href="pages/hobbies.html">Hobbies</a> tab!
         </div>
         <hr>
