Implemented projects page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -33,6 +33,44 @@
         </div>
     </header>
     
+    <section id="content">
+        <h3>
+            Projects
+        </h3>
+        <div class="main-text">
+            <h4>
+                Throughout the years, I've worked on several projects. Listed are some of my highlights:
+            </h4>
+
+            <div class="project-list">
+                <ul>
+                    <li>
+                        The website you're currently on! This is one of the biggest (on-going) projects I have so far.
+                        This personal website will be updated frequently. 
+                    </li>
+                    <br>
+                    <li>
+                        <a href="https://alenrtan.github.io/amaa-team.github.io/" target="_blank">TaskMaster</a>
+                        was a productivity application that was made purely with Java and JavaFX. It allowed the user create to-do lists
+                        and reminders through a simple GUI. I lead a group of 4 whilst utilizing agile methodology. More information can be found
+                        through the project's <a href="https://alenrtan.github.io/amaa-team.github.io/" target="_blank">website</a> or 
+                        <a href="https://github.com/aacuna45/AMAA-Project" target="_blank">github repo</a>.
+                        <br>
+                        <img src="../img/TaskMaster/TM-2.png">
+                    </li>
+                    <br>
+                    <li>
+                        Database Management Systems Project: This is a working CLI created with Java and JDBC that allowed users to be able 
+                        to interact with a MySQL database. Users would be able to update, add, or remove entries in the 
+                        exisiting database.
+                    </li>
+                    <br>
+                </ul>
+            </div>
+            <hr>
+        </div>
+    </section>
+
     <footer>
         <div class="leftFoot">Made by Alen Ray Tan - 2024</div>
         <div class="rightFoot">alenraytan@gmail.com</div>
