Updated Information and added new tab

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div><a class="active" href="index.html">Home</a></div>
             <div class="links"><a href="pages/projects.html">Projects</a></div>
             <div class="links"><a href="pages/hobbies.html">Hobbies</a></div>
+            <div class="links"><a href="pages/games.html">Games</a></div>
             <div class="links"><a href="pages/contact.html">Contact</a></div>
-
             <div><a class="burger"href="javascript:void(0);" class="icon" onclick="burgerMenu()">
                 <i class="fa fa-bars"></i></a>
             </div>
@@ -52,7 +52,7 @@
             <br><br>
             From time to time, you can find me either working on <a href="pages/projects.html">projects</a> (like this website!), playing games such as
             Genshin Impact or Valorant or watching some anime! Recently, I've started playing American Truck Simulator and Palworld! Find out 
-            more about what I do during my free time in the <a href="pages/hobbies.html">Hobbies</a> tab!
+            more about what I do during my free time in the <a href="pages/hobbies.html">Hobbies</a> and <a href="pages/games.html">Games</a> tab!
         </div>
         <hr>
     </section>   
