--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -23,8 +23,8 @@
             <div><a class="active" href="../index.html">Home</a></div>
             <div class="links"><a href="../pages/projects.html">Projects</a></div>
             <div class="links"><a href="../pages/hobbies.html">Hobbies</a></div>
+            <div class="links"><a href="../pages/games.html">Games</a></div>
             <div class="links"><a href="../pages/contact.html">Contact</a></div>
-            
             <div><a class="burger"href="javascript:void(0);" class="icon" onclick="burgerMenu()">
                 <i class="fa fa-bars"></i></a>
             </div>
@@ -32,6 +32,42 @@
             <div id="dark-light" class="dark-mode-bttn"><i class="fa fa-moon-o"></i></div>
         </div>
     </header>
+
+    <section id="content">
+        <h3>
+            Hobbies
+        </h3>
+        <div class="main-text">
+            One of my favorite pastimes is taking pictures of the scenery around me. I find that
+            nature provides plentiful opportunities for a great picture. Here's a quick look:
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <img src="../img/Photos/IMG_3214.jpeg" style="width:45%">
+                <img src="../img/photos/moon.JPG" style="width:19%">
+                <img src="../img/photos/favpic.JPG" alt="One of my favorite pictures. Taken at White Sands" style="width:51.5%">
+                <div class="photos"><img src="../img/Photos/IMG_5913.JPG" style="width:40%"></div>
+            </div>
+            <br>
+    
+        </div>
+        <hr>
+        <div class="main-text">
+            I also enjoying tinkering with custom keyboards and trying out different keyboard switches and keycaps.
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <img src="../img/Photos/IMG_6887.JPG" style="width:45%">
+                <img src="../img/Photos/IMG_6888.jpeg" style="width:45%">
+            </div>
+        </div>
+        <hr>
+        <br>
+        <br>
+        <br>
+    </section>
 
     <footer>
         <div class="leftFoot">Made by Alen Ray Tan - 2024</div>
