--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,6 +23,7 @@
             <div><a class="active" href="../index.html">Home</a></div>
             <div class="links"><a href="../pages/projects.html">Projects</a></div>
             <div class="links"><a href="../pages/hobbies.html">Hobbies</a></div>
+            <div class="links"><a href="../pages/games.html">Games</a></div>
             <div class="links"><a href="../pages/contact.html">Contact</a></div>
             
             <div><a class="burger"href="javascript:void(0);" class="icon" onclick="burgerMenu()">
