--- a/pages/games.html
+++ b/pages/games.html
@@ -38,7 +38,7 @@
             Games
         </h3>
         <div class="main-text">
-            [PLACE HOLDER]
+            Student during the day, gamer by night - or so they say. 
         </div>
 
 
