--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="links"><a href="pages/hobbies.html">Hobbies</a></div>
             <div class="links"><a href="pages/games.html">Games</a></div>
             <div class="links"><a href="pages/contact.html">Contact</a></div>
+            <!-- a listener for the button -->
             <div><a class="burger"href="javascript:void(0);" class="icon" onclick="burgerMenu()">
                 <i class="fa fa-bars"></i></a>
             </div>
