--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,6 +34,17 @@
         </div>
     </header>
 
+    <section id="content">
+        <h3>
+            Contact
+        </h3>
+        <div class="main-text">
+            If you need to contact me, the best way to reach me is through email. I can be 
+            reached through my NMSU Email, <a href="mailto:atan8@nmsu.edu">atan8@nmsu.edu</a>, 
+            or through my gmail, <a href="mailto:alenraytan@gmail.com">alenraytan@gmail.com</a>
+        </div>
+    </section>
+
     <footer>
         <div class="leftFoot">Made by Alen Ray Tan - 2024</div>
         <div class="rightFoot">alenraytan@gmail.com</div>
