--- a/pages/games.html
+++ b/pages/games.html
@@ -38,9 +38,48 @@
             Games
         </h3>
         <div class="main-text">
-            Student during the day, gamer by night - or so they say. 
-        </div>
+            Student by day, gamer by night - or so they say.
+            <br>
+            I play a variety of games from ARPG's to FPS to simulator games! Some games I play include:
 
+            <div class="list">
+                <ul>
+                    <li>
+                        Genshin Impact
+                    </li>
+                    <li>
+                        Valorant
+                    </li>
+                    <li>
+                        Apex Legends
+                    </li>
+                    <li>
+                        Palworld
+                    </li>
+                    <li>
+                        American Truck Simulator
+                    </li>
+                    <li>
+                        Wuthering Waves (not yet released, but will definitely play!)
+                    </li>
+                </ul>
+            </div>
+            <br>
+            When it comes to games, I'm just a casual player. Ocassional grind, but nothing too major.
+            <br><br>
+            Personally speaking, I love when games have great OSTs that come along with them - such as Genshin Impact's.
+            Especially the new region, Fontaine's, music. Take a listen, if you'd like, below!
+            <br>
+            <br>
+            <iframe
+                src="https://www.youtube.com/embed/playlist?list=PLqWr7dyJNgLJlaPW2am1Cp_URVwtsclKh">
+            </iframe>
+            <br><br>
+        </div>
+        <hr>
+        <br>
+        <br>
+        <br>
 
     </section>
 
