--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -44,6 +44,7 @@
 
         <div class="row">
             <div class="column">
+                <!-- playing around with the values to see which fits the best. Ended up with these -->
                 <img src="../img/Photos/IMG_3214.jpeg" style="width:45%">
                 <img src="../img/Photos/mooncam.JPG" style="width:19%">
                 <img src="../img/Photos/whitesands.JPG" alt="One of my favorite pictures. Taken at White Sands" style="width:51.5%">
