--- a/pages/projects.html
+++ b/pages/projects.html
@@ -42,7 +42,7 @@
                 Throughout the years, I've worked on several projects. Listed are some of my highlights:
             </h4>
 
-            <div class="project-list">
+            <div class="list">
                 <ul>
                     <li>
                         The website you're currently on! This is one of the biggest (on-going) projects I have so far.
