--- a/pages/games.html
+++ b/pages/games.html
@@ -20,11 +20,13 @@
 <body>
     <header>
         <div class="topnav">
-            <div><a class="active" href="../index.html">Home</a></div>
+            <div><a href="../index.html">Home</a></div>
             <div class="links"><a href="../pages/projects.html">Projects</a></div>
             <div class="links"><a href="../pages/hobbies.html">Hobbies</a></div>
             <div class="links"><a href="../pages/games.html">Games</a></div>
             <div class="links"><a href="../pages/contact.html">Contact</a></div>
+            <div class="links"><a href="../pages/connect4.html">Connect4</a></div>
+            
             <div><a class="burger"href="javascript:void(0);" class="icon" onclick="burgerMenu()">
                 <i class="fa fa-bars"></i></a>
             </div>
