--- a/pages/connect4.html
+++ b/pages/connect4.html
@@ -42,8 +42,16 @@
         </h3>
         <div class="main-text">
             A simple connect4 game. Two players, first to get 4 tokens in a row wins!
-            <br>
-            <br>
+            <br><br>
+            <div id="game-text">
+                Player 1 - Blue | Player 2 - Yellow
+            </div>
+
+            <div id="restart-area">
+                <button id="restart" type="button" onclick="restartGame()">Reset Board</button>
+                <br><br>
+            </div>
+
         </div>
     </section>
 
