--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             experiments to figure things out! I love being able to collaborate with different people and hearing out
             different ideas. 
             <br><br>
-            I have experience in using Java, C, HTML, CSS, and MySQL. I have a strong interest with front-end development
+            I have experience in using Java, JavaScript, HTML, CSS, C, and MySQL. I have a strong interest with front-end development
             and I am willing to learn different frameworks and such. I am also fluent in English and Proficient in Tagalog (Filipino). 
             <br><br>
             From time to time, you can find me either working on <a href="pages/projects.html">projects</a> (like this website!), playing games such as
