--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="js/script.js" defer></script>
@@ -26,7 +26,7 @@
             <div class="links"><a href="pages/hobbies.html">Hobbies</a></div>
             <div class="links"><a href="pages/games.html">Games</a></div>
             <div class="links"><a href="pages/contact.html">Contact</a></div>
-            <div class="links"><a href="/pages/connect4.html">Connect4</a></div>
+
             <!-- a listener for the button -->
             <div><a class="burger"href="javascript:void(0);" class="icon" onclick="burgerMenu()">
                 <i class="fa fa-bars"></i></a>
@@ -46,15 +46,14 @@
             Hello there! My name is Alen Ray Tan. I am currently a computer science
             student here at New Mexico State University. I was born in the Philippines and raised 
             in Las Cruces, New Mexico. I am a "hands-on" type of learner - meaning I love to do different
-            experiments to figure things out! I love being able to collaborate with different people and hearing out
-            different ideas. 
+            experiments to figure things out! I love collaborating with others to be able to bring new ideas to life!
             <br><br>
-            I have experience in using Java, JavaScript, HTML, CSS, C, and MySQL. I have a strong interest with front-end development
-            and I am willing to learn different frameworks and such. I am also fluent in English and Proficient in Tagalog (Filipino). 
+            I have a strong interest in Information Technology (IT) and front-end development. I have experience using Java, Javascript, HTML,
+            CSS, Bootstrap, and MySQL. Additionally, I have experience in creating techincal documentation and instruction sets for workplace
+            training purposes - this documentation can be found <a href="pages/docs.html">here</a>
             <br><br>
-            From time to time, you can find me either working on <a href="pages/projects.html">projects</a> (like this website!), playing games such as
-            Genshin Impact or Valorant or watching some anime! Recently, I've started playing American Truck Simulator and Palworld! Find out 
-            more about what I do during my free time in the <a href="pages/hobbies.html">Hobbies</a> and <a href="pages/games.html">Games</a> tab!
+            Explore my <a href="pages/projects.html">projects</a> (like this website!), my <a href="pages/hobbies.html">Hobbies,</a> 
+            and  <a href="pages/games.html">games that I play</a>.
         </div>
         <hr>
     </section>   
