Added project; removed some redundant code

--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -46,10 +46,14 @@
         <div class="row">
             <div class="column">
                 <!-- playing around with the values to see which fits the best. Ended up with these -->
-                <img src="../img/Photos/IMG_3214.jpeg" style="width:45%">
-                <img src="../img/Photos/mooncam.JPG" style="width:19%">
-                <img src="../img/Photos/whitesands.JPG" alt="One of my favorite pictures. Taken at White Sands" style="width:51.5%">
-                <div class="photos"><img src="../img/Photos/IMG_5913.JPG" style="width:40%"></div>
+                <div>
+                    <img src="../img/Photos/IMG_3214.jpeg" style="width:45%">
+                    <img src="../img/Photos/mooncam.JPG" style="width:19%">
+                </div>
+                
+
+                    <img src="../img/Photos/whitesands.JPG" alt="One of my favorite pictures. Taken at White Sands" style="width:51.5%">
+                    <img src="../img/Photos/IMG_5913.JPG" style="width:40%">
             </div>
             <br>
     
