--- a/pages/projects.html
+++ b/pages/projects.html
@@ -47,8 +47,17 @@
                 <ul>
                     <li>
                         <a href="https://github.com/derkstouffers/CS382-Final-Project" target="_blank">Finance & Stonks</a>
-
+                        Finance & Stonks is a demo financial tracking application built using Node.js, Axios, Plaid API, HTML, Bootstrap/CSS, 
+                        MongoDB/Mongoose, and Chart.js. I collaborated with a team of 5 and focused on mostly on front-end development. I also focused 
+                        on creating and managing user routes, user validation, and data visualization using Chart.js.
+                        <br>
                     </li>
+
+                    <div class="box">
+                        <img src="../img/F&S/login.png" style="width: 50%; height: 50%; margin: 5px;">
+                        <img src="../img/F&S/sign-up.png" style="width: 50%; height: 50%; margin: 5px">
+                    </div>
+
                     <br>
                     <li>
                         <a href="https://alenrtan.github.io/amaa-team.github.io/" target="_blank">TaskMaster</a>
@@ -57,7 +66,6 @@
                         through the project's <a href="https://alenrtan.github.io/amaa-team.github.io/" target="_blank">website</a> or 
                         <a href="https://github.com/aacuna45/AMAA-Project" target="_blank">github repo</a>.
                         <br>
-                        <img src="../img/TaskMaster/TM-2.png">
                     </li>
                     <br>
                     <li>
