added resume pdf

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,6 +42,12 @@
             If you need to contact me, the best way to reach me is through email. I can be 
             reached through my NMSU Email, <a href="mailto:atan8@nmsu.edu">atan8@nmsu.edu</a>, 
             or through my gmail, <a href="mailto:alenraytan@gmail.com">alenraytan@gmail.com</a>
+            <br><br>
+            You can find my resume here:<br>
+            <div>
+                <embed src="/img/Tan, Alen Ray - Resume.pdf" height="700" width="720" type="application/pdf">
+            </div>
+            
         </div>
     </section>
 
