Updates to projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,6 +7,7 @@
     <title>Alen Ray Tan</title>
     
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/projects.css"
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -46,18 +47,54 @@
             <div class="list">
                 <ul>
                     <li>
+                        <a herf="https://github.com/SarahDiazZ/GrubGoals" target="_blank">Grub Goals</a>
+                        is a web application built using React + Vite, MongoDB/Mongoose, Axios, Chart.js, and React-big-calendar. Grub Goals' goal is simple: to simplify meal planning. The application utilizes the <a href="https://spoonacular.com/food-api" target="_blank">Spoonacular API</a>
+                        to provide users different recipes that align with their diets. Collaborating with a team of 4, I focused on 
+                        front-end development, data visualization, and data retrieval.
+
+                        <div class="data-container-carousel">
+                            <img class="data-item" id="img-1" src="../img/Grub_Goals/GG_landing.png">
+                            <img class="data-item" id="img-2" src="../img/Grub_Goals/GG_dashboard.png">
+                            <img class="data-item" id="img-3" src="../img/Grub_Goals/GG_recipes.png">
+                            <img class="data-item" id="img-4" src="../img/Grub_Goals/GG_detailed.png">
+                        
+                        </div>
+
+                        <div class="button-holder">
+                            <button id="stop-button">Stop Auto Scroll</button>
+                        </div>
+                    </li>
+                    <br>
+                    <li>
+                        <a href="https://github.com/alenrtan/Pomo" target="_blank">Pomo</a>
+                        is a simple, barebones, and minimalistic productivity desktop application which helped
+                        the user with tasks using the Pomodoro method. The application allowed the user to list goals, 
+                        create timers, or use a stopwatch if needed. Built using Kotlin. For more information 
+                        such as motivation, studies, and user studies, see 
+                        <a href="https://docs.google.com/presentation/d/1WbzFsONhaqF-tMZfx_1uR1rXtVJj46K6tCN9FiPe91c/edit?usp=drive_link" target="_blank">this powerpoint</a>.
+
+                        <div class="box">
+                            <img src="../img/Pomo/Pomo.png" style="width: 50%; height: 50%; margin: 5px;">
+                        </div>
+                    </li>
+                    <br>
+                    <li>
                         <a href="https://github.com/derkstouffers/CS382-Final-Project" target="_blank">Finance & Stonks</a>
-                        Finance & Stonks is a demo financial tracking application built using Node.js, Axios, Plaid API, HTML, Bootstrap/CSS, 
+                        is a demo financial tracking application built using Node.js, Axios, Plaid API, HTML, Bootstrap/CSS, 
                         MongoDB/Mongoose, and Chart.js. I collaborated with a team of 5 and focused on mostly on front-end development. I also focused 
                         on creating and managing user routes, user validation, and data visualization using Chart.js.
                         <br>
+
+                        <div class="box">
+                            <img src="../img/F&S/login.png" style="width: 50%; height: 50%; margin: 5px;">
+                            <img src="../img/F&S/sign-up.png" style="width: 50%; height: 50%; margin: 5px">
+                        </div>
                     </li>
-
-                    <div class="box">
-                        <img src="../img/F&S/login.png" style="width: 50%; height: 50%; margin: 5px;">
-                        <img src="../img/F&S/sign-up.png" style="width: 50%; height: 50%; margin: 5px">
-                    </div>
-
+                    <br>
+                    <li>
+                        <a href="../pages/connect4.html">Connect4</a> - a simple Connect4 game. Code can be found 
+                        <a href="https://github.com/alenrtan/alenrtan.github.io/blob/main/js/connect4.js" target="_blank">here</a>.
+                    </li>
                     <br>
                     <li>
                         <a href="https://alenrtan.github.io/amaa-team.github.io/" target="_blank">TaskMaster</a>
