update to carousel

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,7 +7,7 @@
     <title>Alen Ray Tan</title>
     
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/projects.css"
+    <link rel="stylesheet" href="../styles/carousel.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
